tests ReactShadow implementation

--- a/apps/stress-test/src/pages/v9/shadow-island/index.html
+++ b/apps/stress-test/src/pages/v9/shadow-island/index.html
@@ -6,6 +6,7 @@
     <title>v9: Stress Tree</title>
   </head>
   <body>
+    <div id="root"></div>
     <style>
       html,
       body {
@@ -13,7 +14,10 @@
         padding: 0;
         width: 100vw;
         height: 100vh;
+      }
 
+      #root {
+        height: 100%;
         display: grid;
         grid-template-columns: 1fr 1fr;
       }
